--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -5,9 +5,9 @@ on:
     
 jobs: 
   job1:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     steps:
     - name: checks-out your repository under $GITHUB_WORKSPACE
-      uses: actions/checkout@vs
+      uses: actions/checkout@v2
     - name: use echo command
       run: echo "sample-workflow"
